--- a/.github/workflows/ssmtest.yaml
+++ b/.github/workflows/ssmtest.yaml
@@ -4,12 +4,14 @@ jobs:
   ssm_test:
     runs-on: ubuntu-latest
     name: SSM Test
+    env:
+      K8S_Version: '1.21'
     steps:
       - name: Get SSM parameter value
         id: getparameter
         uses: mycloudtutorials/aws-ssm-get-parameter-action@v0.2
         with:
           aws-region: us-west-2
-          parameter-name: '/aws/ssm/paramrter/ami-id'
+          parameter-name: '/aws/ssm/paramrter/ami-id/${K8S_Version}'
       - name: Get the Output line
         run: echo "OUTPUT ${{ steps.getparameter.outputs.value }}"
