--- a/.github/workflows/ssmtest.yaml
+++ b/.github/workflows/ssmtest.yaml
@@ -12,6 +12,6 @@ jobs:
         uses: mycloudtutorials/aws-ssm-get-parameter-action@v0.2
         with:
           aws-region: us-west-2
-          parameter-name: '/aws/ssm/paramrter/ami-id/${K8S_Version}'
+          parameter-name: "/aws/ssm/paramrter/ami-id/${{ env.K8S_Version }}/test"
       - name: Get the Output line
         run: echo "OUTPUT ${{ steps.getparameter.outputs.value }}"
